--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -171,9 +171,10 @@ body {
 .cart_quantity_count{
     margin-top: 16px;
     /* background-color: red; */
-    margin-left: 27px;
+    margin-left: 25px;
     position: absolute;
-    font-size: 29px;
+    font-size: 26px;
+    color: red;
 
 }
 .plantname_heading{
